--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ nav a{ text-decoration:none;color:#222;font-weight:500}
     <a href="sevices.html">Services</a>
     <a href="allroutebook.html">Routes</a>
     <a href="fleet.html">Fleets</a>
-    <a href="#blogs">Blogs</a>
-    <a href="#contact">Contact</a>
+    <a href="blogs.html">Blogs</a>
+    <a href="contacts.html">Contact</a>
     <a href="#" class="book-btn"><i class="ri-taxi-fill icon-large"></i> Book Now</a>
   </nav>
 
@@ -446,4 +446,5 @@ if(countersSection) obs.observe(countersSection);
 
 </body>
 </html>
+
 
