--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ nav a{ text-decoration:none;color:#222;font-weight:500}
 .routes-container{grid-template-columns:repeat(4,1fr)}
 .route-box img{width:100%;height:150px;object-fit:cover;border-radius:10px;margin-bottom:12px}
 .route-pin{font-size:20px;color:#ff8c00;margin-bottom:8px}
+.route-box a{text-decoration: none; color: inherit;}
 
 /* ---------- Blogs ---------- */
 .blogs-section{padding:50px 20px;max-width:1100px;margin:40px auto}
@@ -171,28 +172,28 @@ nav a{ text-decoration:none;color:#222;font-weight:500}
     <div class="route-box">
       <div class="route-pin"><i class="ri-map-pin-2-fill"></i></div>
       <img src="https://images.unsplash.com/photo-1601961405399-801fb1f34581?q=80&w=1171&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-      <h3>Pune → Mumbai</h3>
+      <a href="/routes/punemumbai.html"><h3>Pune → Mumbai</h3></a>
       <p>150 km • 3 hrs</p>
     </div>
 
     <div class="route-box">
       <div class="route-pin"><i class="ri-map-pin-2-fill"></i></div>
       <img src="https://images.unsplash.com/photo-1737347799179-40be496e5937?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-      <h3>Pune → Lonavala</h3>
+      <a href="/routes/punelonavala.html"><h3>Pune → Lonavala</h3></a>
       <p>65 km • 1.5 hrs</p>
     </div>
 
     <div class="route-box">
       <div class="route-pin"><i class="ri-map-pin-2-fill"></i></div>
       <img src="https://images.unsplash.com/photo-1665888013405-9d4bdb9b115c?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-      <h3>Pune → Nashik</h3>
+      <a href="/routes/punenashik.html"><h3>Pune → Nashik</h3></a>
       <p>210 km • 4 hrs</p>
     </div>
 
     <div class="route-box">
       <div class="route-pin"><i class="ri-map-pin-2-fill"></i></div>
       <img src="https://images.unsplash.com/photo-1614082242765-7c98ca0f3df3?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-      <h3>Pune → Goa</h3>
+      <a href="/routes/punegoa.html"><h3>Pune → Goa</h3></a>
       <p>450 km • 8 hrs</p>
     </div>
   </div>
@@ -446,5 +447,6 @@ if(countersSection) obs.observe(countersSection);
 
 </body>
 </html>
+
 
 
