--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ nav a{ text-decoration:none;color:#222;font-weight:500}
   </div>
 
     <div class="routes-footer" style="margin-top:45px; text-align:center;">
-      <a href="/allroutebook.html" class="view-all" style="background:#ffb400; padding:10px 22px; border-radius:8px; color:#000; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(0,0,0,0.15); display:inline-block;">View All Routes →</a>
+      <a href="allroutebook.html" class="view-all" style="background:#ffb400; padding:10px 22px; border-radius:8px; color:#000; text-decoration:none; font-weight:600; box-shadow:0 4px 10px rgba(0,0,0,0.15); display:inline-block;">View All Routes →</a>
     </div>
 
   <!-- <div style="margin-top:45px;text-align:center">
@@ -447,6 +447,7 @@ if(countersSection) obs.observe(countersSection);
 
 </body>
 </html>
+
 
 
 
