--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ nav a{ text-decoration:none;color:#222;font-weight:500}
       <div class="content">
         <h3>Top 5 Tips for Safe Cab Travel</h3>
         <p>Learn essential safety tips to ensure a smooth and secure journey every time.</p>
-        <a href="#" class="blog-btn">Read More →</a>
+        <a href="blogs/blogsdetailspage.html" class="blog-btn">Read More →</a>
       </div>
     </div>
 
@@ -447,6 +447,7 @@ if(countersSection) obs.observe(countersSection);
 
 </body>
 </html>
+
 
 
 
