--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ nav a{ text-decoration:none;color:#222;font-weight:500}
       <div class="content">
         <h3>How to Save Money on Outstation Rides</h3>
         <p>Simple strategies that can help you cut costs on long-distance travels.</p>
-        <a href="#" class="blog-btn">Read More →</a>
+        <a href="blogs/blogsdetailspage.html" class="blog-btn">Read More →</a>
       </div>
     </div>
 
@@ -292,7 +292,7 @@ nav a{ text-decoration:none;color:#222;font-weight:500}
       <div class="content">
         <h3>Why Choose VeloTaxi for Daily Commute?</h3>
         <p>Discover what makes VeloTaxi the most trusted cab service in the city.</p>
-        <a href="#" class="blog-btn">Read More →</a>
+        <a href="blogs/blogsdetailspage.html" class="blog-btn">Read More →</a>
       </div>
     </div>
   </div>
@@ -447,6 +447,7 @@ if(countersSection) obs.observe(countersSection);
 
 </body>
 </html>
+
 
 
 
